test/expected/explain_ro_exclam_k_b.out
struct S; explain bool operator!(S) &
            ^
13: error: member operator ! must have exactly 0 parameters
